Add toekn sample code
